# mtg-printable-set-label-generator

./: .tool-versions  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: dependency-review.yml
mtglabels/: generator.py
mtglabels/config/: utils.py
