[project]
name = "mtg-printable-set-label-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.7.1",
    "fpdf2>=2.7.9",
    "pandas>=2.2.2",
    "pillow>=10.4.0",
    "requests>=2.32.3",
    "urllib3>=2.2.2",
]
